--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/facturaEspecifica.html
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/facturaEspecifica.html
@@ -32,6 +32,10 @@
               <h3>Información del Cliente</h3>
               <div class="factura-grid" id="cuatroporcuatro">
                 <div>
+                  <strong>Código de Factura:</strong>
+                  <span id="codigoFactura"></span>
+                </div>
+                <div>
                   <strong>Cédula del Cliente:</strong>
                   <span id="cedulaCliente"></span>
                 </div>
@@ -44,6 +48,10 @@
                 </div>
                 <div>
                   <strong>Empleado:</strong> <span id="empleado"></span>
+                </div>
+                <div>
+                  <strong>Fecha de Compra:</strong>
+                  <span id="fechaCompra"></span>
                 </div>
               </div>
             </div>
